Use assets from U.S. Web Design Standards

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 
     <link rel="canonical" href="https://ood.pif.gov/">
 
+    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/google-fonts.css">
+
     <!-- Favicons
     ================================================== -->
     <!-- 128x128 -->
@@ -77,6 +80,8 @@
   <body>
 
     Hello World
+
+    <script src="assets/js/components.js"></script>
 
   </body>
 
