Add persona data and templating

--- a/index.html
+++ b/index.html
@@ -12,35 +12,5 @@ layout: default
 </article>
 
 <article>
-
-  <h2>User Personas</h2>
-  <p>These are examples of who you're helping.</p>
-
-  <article>
-    <section>
-      <h3>Karla</h3>
-      <p>Karla is passionate, smart, humble, and engaged. She grew up in West Baltimore and is now getting her Masters and working with local advocacy groups to increase opportunity and better her community.</p>
-    </section>
-    <section>
-      <h4>Quotes</h4>
-      <p>"Opportunity is a mindset"</p>
-      <p>"I may not have been proud of my house and been on food stamps but my parents took culture, literature, and history seriously, and those are the types of things that influence you knowing what you have access to and don’t have access to in life"</p>
-    </section>
-    <section>
-      <h4>Needs</h4>
-      <p>To be able to advocate for her community in a way that allows her to personally flourish instead of sacrifice</p>
-      <p>For products and services to not simply challenge or a irm her expectations/assumptions but take her beyond that moment and provide clearer actions</p>
-    </section>
-    <section>
-      <h4>Actions she is looking to take</h4>
-      <p>To find out how she can best advocate for her community other than self-sacrifice</p>
-      <p>Be able to compare cities' indicators of opportunity to show if policies intended to help opportunity are doing so</p>
-    </section>
-    <section>
-      <h4>Goals and Motivations</h4>
-      <p>Finding her identity, fulfillment, and role in her community through her continued advocacy work</p>
-      <p>Reframing "poverty reduction" to "wealth development" at the community level</p>
-    </section>
-  </article>
-
+  {% include_relative index_includes/personas.html %}
 </article>
