Add Kansas City data and template

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 </header>
 
 <article>
-  <h2>Data Inventory</h2>
+  {% include_relative index_includes/data-inventory.html %}
 </article>
 
 <article>
