--- a/index_includes/data-inventory.html
+++ b/index_includes/data-inventory.html
@@ -4,9 +4,17 @@
 <div class="usa-accordion">
   <ul class="usa-unstyled-list">
 
-    {% for provider_hash in site.data.data-providers %}
-    {% assign provider = provider_hash[1] %}
-    {% assign control_id = "collapsible-provider-" | append:forloop.index0 %}
+    {% capture sort_strings %}
+      {% for p in site.data.data-providers %}
+        {{ p[1].name | slugify }}__{{ p[0] }}
+      {% endfor %}
+    {% endcapture %}
+    {% assign sort_strings = sort_strings | split:' ' | sort %}
+    {% for sort_string in sort_strings %}
+    {% assign sort_string_pair = sort_string | split:'__' %}
+    {% assign id = sort_string_pair[1] %}
+    {% assign provider = site.data.data-providers[id] %}
+    {% assign control_id = "collapsible-provider-" | append:forloop.index %}
     <li>
       <section>
         <button class="usa-button-unstyled" aria-expanded="true"
