Sort datasets by name within each topic

--- a/index_includes/data-inventory.html
+++ b/index_includes/data-inventory.html
@@ -33,15 +33,16 @@
             <tbody>
               {% assign topic_groups = provider.datasets | group_by: 'topic' | sort: 'name' %}
               {% for topic_group in topic_groups %}
-              {% for dataset in topic_group.items %}
-              <tr>
-                {% if forloop.first %}
-                <td scope="row" rowspan="{{ topic_group.items | size }}">{{ dataset.topic }}</td>
-                {% endif %}
-                <td>{{ dataset.description }}</td>
-                <td><a href="{{ dataset.url | uri_escape }}">{{ dataset.url }}</a></td>
-              </tr>
-              {% endfor %}
+                {% assign datasets = topic_group.items | sort: 'description' %}
+                {% for dataset in datasets %}
+                <tr>
+                  {% if forloop.first %}
+                  <td scope="row" rowspan="{{ topic_group.items | size }}">{{ dataset.topic }}</td>
+                  {% endif %}
+                  <td>{{ dataset.description }}</td>
+                  <td><a href="{{ dataset.url | uri_escape }}">{{ dataset.url }}</a></td>
+                </tr>
+                {% endfor %}
               {% endfor %}
             </tbody>
           </table>
