--- a/index.html
+++ b/index.html
@@ -2,15 +2,19 @@
 layout: default
 ---
 
-<header>
-  <h1>Open Opportunity Data</h1>
-  <p>Developer Resources</p>
-</header>
+<div class="usa-grid">
 
-<article>
-  {% include_relative index_includes/data-inventory.html %}
-</article>
+  <header class="usa-width-one-whole">
+    <h1>Open Opportunity Data</h1>
+    <p class="usa-font-lead">Developer Resources</p>
+  </header>
 
-<article>
-  {% include_relative index_includes/personas.html %}
-</article>
+  <article class="usa-width-one-whole">
+    {% include_relative index_includes/data-inventory.html %}
+  </article>
+
+  <article class="usa-width-one-whole">
+    {% include_relative index_includes/personas.html %}
+  </article>
+
+</div>
