--- a/index_includes/data-inventory-provider.html
+++ b/index_includes/data-inventory-provider.html
@@ -2,13 +2,13 @@
 {% assign provider = site.data.data-providers[include.id] %}
 {% assign group_key = include.group_key %}
 
-<div class="usa-accordion">
+<div class="usa-accordion-bordered">
   <ul class="usa-unstyled-list">
     <li>
       <section>
         <button class="usa-button-unstyled" aria-expanded="false"
                 aria-controls="collapsible-0">
-          {{ provider.name }}
+          <h4>{{ provider.name }}</h4>
         </button>
 
         <div id="collapsible-0" aria-hidden="true"
