--- a/index_includes/data-inventory.html
+++ b/index_includes/data-inventory.html
@@ -1,5 +1,5 @@
 <h2>Data Inventory</h2>
-<p>Data related to the topic of opportunity.</p>
+<p class="usa-font-lead">Data related to the topic of opportunity.</p>
 
 {% include_relative index_includes/data-inventory-provider.html id='federal' group_key='curator' %}
 
