--- a/index_includes/personas.html
+++ b/index_includes/personas.html
@@ -1,5 +1,5 @@
 <h2>User Personas</h2>
-<p>These are examples of who you're helping.</p>
+<p class="usa-font-lead">These are examples of who you're helping.</p>
 
 {% for persona_hash in site.data.personas %}
 {% assign persona = persona_hash[1] %}
