Add provider notes, fix nits

--- a/index_includes/data-inventory-provider.html
+++ b/index_includes/data-inventory-provider.html
@@ -17,6 +17,10 @@
 
             <a href="{{ edit_url }}">Edit in GitHub</a>
 
+            {% if provider.notes %}
+              <p>{{ provider.notes }}</p>
+            {% endif %}
+
             <thead>
               <tr>
                 <th scope="col">{{ group_key | capitalize }}</th>
