--- a/index_includes/personas.html
+++ b/index_includes/personas.html
@@ -8,7 +8,8 @@
 
     <div class="usa-width-one-third">
       <section>
-        <img class="head" src="{{ site.baseurl }}/img/{{ persona.gender }}-silhouette.png">
+        <img class="head" src="{{ site.baseurl }}/img/{{ persona.gender }}-silhouette.png"
+             alt="Silhouette of a {{ persona.gender }} face">
         <h3 class="name">{{ persona.name }}</h3>
         <p>{{ persona.overview }}</p>
       </section>
