Namespace CSS classes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <header>
   {% include disclaimer.html %}
 
-  <div class="banner">
+  <div class="ood-banner">
     <h1>Open Opportunity Data</h1>
     <p class="usa-font-lead">Developer Resources</p>
   </div>
