Add some context to sections

--- a/index_includes/data-inventory.html
+++ b/index_includes/data-inventory.html
@@ -1,5 +1,7 @@
 <h2>Data Inventory</h2>
-<p class="usa-font-lead">Data related to the topic of opportunity.</p>
+<p class="usa-font-lead">Selected data related to opportunity.</p>
+<p>The following data have been selected from federal and local repositories for relevance to the topic of opportunity mobility.</p>
+<p>Please feel free to <a href="{{ site.repo_url | append: "/issues/" }}">provide feedback</a> and combine this data with data from other sources to create tools of maximum value.</p>
 
 {% include_relative index_includes/data-inventory-provider.html id='federal' group_key='curator' %}
 
