--- a/index_includes/personas.html
+++ b/index_includes/personas.html
@@ -1,5 +1,7 @@
 <h2>User Personas</h2>
-<p class="usa-font-lead">These are examples of who you're helping.</p>
+<p class="usa-font-lead">Examples of your users.</p>
+<p>A team of Presidential Innovation Fellows conducted a series of interviews in various cities with those concerned about opportunitiy in their communities and their own lives.</p>
+<p>These are a few of their stories. We'll add more as we go.</p>
 
 {% for persona_hash in site.data.personas %}
 {% assign persona = persona_hash[1] %}
