Small changes to persona description

--- a/index_includes/personas.html
+++ b/index_includes/personas.html
@@ -1,6 +1,6 @@
 <h2>User Personas</h2>
 <p class="usa-font-lead">Examples of your users.</p>
-<p>A team of Presidential Innovation Fellows conducted a series of interviews in various cities with those concerned about opportunitiy in their communities and their own lives.</p>
+<p>A team of Presidential Innovation Fellows conducted interviews in various cities with those looking to take actions to improve access to opportunity in their communities and their own lives.</p>
 <p>These are a few of their stories. We'll add more as we go.</p>
 
 {% for persona_hash in site.data.personas %}
