Small change to site description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <div class="ood-banner">
     <h1>Open Opportunity Data</h1>
     <p class="usa-font-lead">Let's build something amazing.</p>
-    <p class="usa-font-lead">This site is dedicated to providing developers, entrepreneurs, policy makers, and all passionate change agents the data they need in order to create transformational products and services for those that need them most.</p>
+    <p class="usa-font-lead">This site is committed to providing developers, entrepreneurs, policy makers, and all passionate change agents the data they need in order to create transformational products and services for those that need them most.</p>
   </div>
 </header>
 
