--- a/index_includes/data-inventory.html
+++ b/index_includes/data-inventory.html
@@ -1,7 +1,7 @@
 <h2>Data Inventory</h2>
 <p class="usa-font-lead">Selected data related to opportunity.</p>
 <p>This curated data set has been chosen around indicators of opportunity in the hopes that it will help create tools of maximum value.</p>
-<p>We want your feedback! Please suggest additions/modifications to this data set via the <a href="mailto:opportunity-data@listserv.gsa.gov">listserv</a>, <a href="{{ site.repo_url | append: "/issues/" }}">GitHub issues</a>, or by submitting pull requests directly using the "Edit in GitHub" links in each section below. This website belongs to you; improve it at will!</p>
+<p>We want your feedback! Please suggest additions/modifications to this data set via the <a href="mailto:{{ site.email }}">listserv</a>, <a href="{{ site.repo_url | append: "/issues/" }}">GitHub issues</a>, or by submitting pull requests directly using the "Edit in GitHub" links in each section below. This website belongs to you; improve it at will!</p>
 
 {% include_relative index_includes/data-inventory-provider.html id='federal' group_key='curator' %}
 
