Add some attribution text to the hero section.
Largely to help identify the supporting agencies.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
   <div class="ood-banner">
     <h1>Open Opportunity Data</h1>
     <p class="usa-font-lead">Let's build something amazing.</p>
-    <p class="usa-font-lead">This site is committed to providing developers, entrepreneurs, policy makers, and all passionate change agents the data they need in order to create transformational products and services for those that need them most.</p>
+    <p class="usa-font-lead">Built by <a href="https://presidentialinnovationfellows.gov">White House Presidential Innovation Fellows</a> and made possible by the <a href="https://www.census.gov/">US Census Bureau</a> in partnership with the <a href="https://portal.hud.gov/hudportal/HUD">US Department of Housing and Urban Development (HUD)</a>, this site is committed to providing developers, entrepreneurs, policy makers, and all passionate change agents the data they need in order to create transformational products and services for those that need them most.</p>
   </div>
 </header>
 
