--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@ layout: default
   {% include_relative index_includes/personas.html %}
 </article>
 
+<article>
+  {% include_relative index_includes/scenarios.html %}
+</article>
+
 <section class="ood-quotation">
   <p class="usa-font-lead">
     <em>
