Add quotation emphasis.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ layout: default
 <section class="ood-quotation">
   <p class="usa-font-lead">
     <em>
-      "Now, as a nation, we don't promise equal outcomes, but we were founded on the idea everybody should have an equal opportunity to succeed. No matter who you are, what you look like, where you come from, you can make it. That's an essential promise of America. Where you start should not determine where you end up."
+      "Now, as a nation, we don't promise equal outcomes, but we were founded on the idea everybody should have an equal opportunity to succeed. No matter who you are, what you look like, where you come from, you can make it. That's an essential promise of America. <strong>Where you start should not determine where you end up.</strong>"
     </em>
     <br>
     <br>
