--- a/index_includes/scenarios.html
+++ b/index_includes/scenarios.html
@@ -1,5 +1,5 @@
 <h2>Scenarios</h2>
-<p class="usa-font-lead">Selected data related to opportunity.</p>
+<p class="usa-font-lead">Examples of people in the problem space.</p>
 <p>
   <strong>What are scenarios and what are they for?</strong>
   <br>
