--- a/index_includes/scenario.html
+++ b/index_includes/scenario.html
@@ -6,11 +6,13 @@
       <section class="ood-scenario">
         <button class="usa-button-unstyled" aria-expanded="false"
                 aria-controls="collapsible-0">
-          <h4>{{ scenario.name }}</h4>
+          <h4>{{ scenario.name }} — {{ scenario.short_desc }}</h4>
         </button>
 
         <div id="collapsible-0" aria-hidden="true"
              class="usa-accordion-content">
+
+          <p class="usa-font-lead">{{ scenario.long_desc }}.</p>
 
           {% for p in scenario.paragraphs %}
             <p>{{ p }}</p>
