Remove personas and add definition

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
 </article>
 
 <article class="alt">
-  {% include_relative index_includes/personas.html %}
+  {% include_relative index_includes/definition.html %}
 </article>
 
 <article>
