Narrow page content

--- a/index_includes/data-inventory-provider.html
+++ b/index_includes/data-inventory-provider.html
@@ -54,7 +54,7 @@
                   </td>
                   {% endif %}
                   <td>{{ dataset.description }}</td>
-                  <td><a href="{{ dataset.url }}">{{ dataset.url }}</a></td>
+                  <td class="data-url"><a href="{{ dataset.url }}">{{ dataset.url }}</a></td>
                 </tr>
                 {% endfor %}
               {% endfor %}
