--- a/index_includes/definition.html
+++ b/index_includes/definition.html
@@ -1,15 +1,16 @@
-<h2>Defining Opportunity</h2>
-<p class="usa-font-lead">The Open Opportunity Data development process is grounded in the geography of opportunity – the fact that opportunity is not evenly distributed geographically.</p>
-<p></p>
-<p>For the purposes of Open Opportunity Data development, opportunity is defined as:</p>
+<div class="usa-grid">
+  <h2>Defining Opportunity</h2>
+  <p class="usa-font-lead">The Open Opportunity Data development process is grounded in the geography of opportunity – the fact that opportunity is not evenly distributed geographically.</p>
+  <p>For the purposes of Open Opportunity Data development, opportunity is defined as:</p>
 
-<ul>
-  <li>
-    access to the resources and services that a family, individual, or community needs to thrive, and
-  </li>
-  <li>
-    freedom from the stressors that detract from the family, individual, or community's ability to thrive.
-  </li>
-</ul>
+  <ul>
+    <li>
+      access to the resources and services that a family, individual, or community needs to thrive, and
+    </li>
+    <li>
+      freedom from the stressors that detract from the family, individual, or community's ability to thrive.
+    </li>
+  </ul>
 
-<p>Although the specifics vary by time and local context, the opportunity framework applies widely across diverse end users and objectives.</p>
+  <p>Although the specifics vary by time and local context, the opportunity framework applies widely across diverse end users and objectives.</p>
+</div>
