--- a/index_includes/scenarios.html
+++ b/index_includes/scenarios.html
@@ -1,17 +1,20 @@
-<h2>Designing opportunity data tools to meet end users' needs.</h2>
-<p class="usa-font-lead">Below is a set of scenarios to help in your efforts to design digital tools that support or improve current user experiences and respond to their needs and constraints, with the end goal of improving access to opportunity.</p>
-<p>
-  <strong>What are scenarios and what are they for?</strong>
-  <br>
-  The scenarios below leverage subject matter expertise to represent where our target end users are today – how they approach decisions and tasks, and experience problems – without opportunity data technology designed specifically to help them. This information maps the problem space for developers to consider when designing opportunity data apps, mapping tools, and decision aides for the targeted end users.
-</p>
-<p>
-  <strong>What are these scenarios based on?</strong>
-  <br>
-  The content is based on prior field research and extensive professional experience working directly with targeted end users. The idea in creating a scenario is to represent the common elements of target users' current experiences in a realistic way by creating a composite of several different real people.
-</p>
+<div class="usa-grid">
+  <h2>Designing opportunity data tools to meet end users' needs.</h2>
+  <p class="usa-font-lead">Below is a set of scenarios to help in your efforts to design digital tools that support or improve current user experiences and respond to their needs and constraints, with the end goal of improving access to opportunity.</p>
+  <p>
+    <strong>What are scenarios and what are they for?</strong>
+    <br>
+    The scenarios below leverage subject matter expertise to represent where our target end users are today – how they approach decisions and tasks, and experience problems – without opportunity data technology designed specifically to help them. This information maps the problem space for developers to consider when designing opportunity data apps, mapping tools, and decision aides for the targeted end users.
+  </p>
+  <p>
+    <strong>What are these scenarios based on?</strong>
+    <br>
+    The content is based on prior field research and extensive professional experience working directly with targeted end users. The idea in creating a scenario is to represent the common elements of target users' current experiences in a realistic way by creating a composite of several different real people.
+  </p>
 
-{% for s in site.data.scenarios %}
-  {% assign id = s[0] %}
-  {% include_relative index_includes/scenario.html id=id %}
-{% endfor %}
+  {% for s in site.data.scenarios %}
+    {% assign id = s[0] %}
+    {% include_relative index_includes/scenario.html id=id %}
+  {% endfor %}
+
+</div>
