--- a/index_includes/scenario.html
+++ b/index_includes/scenario.html
@@ -6,13 +6,16 @@
       <section class="ood-scenario">
         <button class="usa-button-unstyled" aria-expanded="false"
                 aria-controls="collapsible-0">
-          <h4>{{ scenario.name }} — {{ scenario.short_desc }}</h4>
+          <h4>
+            {{ scenario.name }}
+            <span class="ood-narrow-hide">— {{ scenario.description }}</span>
+          </h4>
         </button>
 
         <div id="collapsible-0" aria-hidden="true"
              class="usa-accordion-content">
 
-          <p class="usa-font-lead">{{ scenario.long_desc }}.</p>
+          <p class="usa-font-lead ood-wide-hide">{{ scenario.description }}.</p>
 
           {% for p in scenario.paragraphs %}
             <p>{{ p }}</p>
