--- a/index_includes/definition.html
+++ b/index_includes/definition.html
@@ -1,6 +1,6 @@
 <div class="usa-grid">
   <h2>Defining Opportunity</h2>
-  <p class="usa-font-lead">The Open Opportunity Data development process is grounded in the geography of opportunity – the fact that today, opportunity is not currently evenly distributed geographically, and we are committed to changing that, so that where you start does not limit where you end up.</p>
+  <p class="usa-font-lead">The Open Opportunity Data development process is grounded in the geography of opportunity – the fact that today, opportunity is not currently evenly distributed geographically, which we are committed to changing so that where a person starts does not limit where she can end up.</p>
   <p>For the purposes of Open Opportunity Data development, opportunity is defined as:</p>
 
   <ul>
