--- a/index_includes/definition.html
+++ b/index_includes/definition.html
@@ -1,6 +1,6 @@
 <div class="usa-grid">
   <h2>Defining Opportunity</h2>
-  <p class="usa-font-lead">The Open Opportunity Data development process is grounded in the geography of opportunity – the fact that today, opportunity is not evenly distributed geographically, which we are committed to changing so that where a person starts does not limit where she can end up.</p>
+  <p class="usa-font-lead">The Open Opportunity Data development process seeks to expose the current, unequal geography of opportunity – the fact that today, opportunity is not evenly distributed. We are committed to changing that, so that a young person's zip code does not determine her destiny.</p>
   <p>For the purposes of Open Opportunity Data development, opportunity is defined as:</p>
 
   <ul>
