--- a/c/index.html
+++ b/c/index.html
@@ -22,7 +22,7 @@
 					<div id="header" class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Telephasic</a></h1>
+							<h1 id="logo"><a href="index.html">Layouts</a></h1>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -56,13 +56,9 @@
 					<!-- Hero -->
 						<section id="hero" class="container">
 							<header>
-								<h2>Telephasic is a responsive
-								<br />
-								site template by <a href="http://html5up.net">HTML5 UP</a></h2>
+								<h2>Open Opportunity Data</h2>
 							</header>
-							<p>Designed and built on <strong>skel</strong> by <a href="http://n33.co">AJ</a>. Released for free under
-							<br />
-							the <a href="http://html5up.net/license">Creative Commons Attribution 3.0 license</a>.</p>
+							<p>A community of practice dedicated to improving lives.</p>
 							<ul class="actions">
 								<li><a href="#" class="button">Get this party started</a></li>
 							</ul>
@@ -120,30 +116,28 @@
 				<div class="wrapper">
 					<section class="container">
 						<header class="major">
-							<h2>Sed magna consequat lorem curabitur tempus</h2>
-							<p>Elit aliquam vulputate egestas euismod nunc semper vehicula lorem blandit</p>
+							<h2>What's happening?</h2>
+							<p>Explore this cross-sector collaboration.</p>
 						</header>
 						<div class="row features">
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper first">
 									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 								</div>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>The government is... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
 									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 								</div>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>Developers are... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
+
 							</section>
 							<section class="4u 12u(narrower) feature">
 								<div class="image-wrapper">
 									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 								</div>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur
-								vel sem sit dolor neque semper magna lorem ipsum.</p>
+								<p>Civil society is... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
 							</section>
 						</div>
 						<ul class="actions major">
