--- a/d/index.html
+++ b/d/index.html
@@ -21,7 +21,7 @@
 					<div id="header">
 
 						<!-- Logo -->
-							<h1><a href="index.html">Dopetrope</a></h1>
+							<h1><a href="index.html">Layouts</a></h1>
 
 						<!-- Nav -->
 							<nav id="nav">
@@ -55,8 +55,8 @@
 						<!-- Banner -->
 							<section id="banner">
 								<header>
-									<h2>Howdy. This is Dopetrope.</h2>
-									<p>A responsive template by HTML5 UP</p>
+									<h2>Open Opportunity Data</h2>
+									<p>A community of practice dedicated to improving lives.</p>
 								</header>
 							</section>
 
@@ -111,7 +111,7 @@
 								<!-- Portfolio -->
 									<section>
 										<header class="major">
-											<h2>My Portfolio</h2>
+											<h2>Tools Using the Data</h2>
 										</header>
 										<div class="row">
 											<div class="4u 12u(mobile)">
@@ -199,7 +199,7 @@
 								<!-- Blog -->
 									<section>
 										<header class="major">
-											<h2>The Blog</h2>
+											<h2>Commitments</h2>
 										</header>
 										<div class="row">
 											<div class="6u 12u(mobile)">
@@ -249,7 +249,7 @@
 							<div class="8u 12u(mobile)">
 								<section>
 									<header>
-										<h2>Blandit nisl adipiscing</h2>
+										<h2>Schedule of events</h2>
 									</header>
 									<ul class="dates">
 										<li>
