--- a/c/index.html
+++ b/c/index.html
@@ -1,218 +1,217 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <!--
-	Telephasic by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+Telephasic by HTML5 UP
+html5up.net | @n33co
+Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Telephasic by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-	</head>
-	<body class="homepage">
-		<div id="page-wrapper">
+  <head>
+    <title>Telephasic by HTML5 UP</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+    <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+  </head>
+  <body class="homepage">
+    <div id="page-wrapper">
 
-			<!-- Header -->
-				<div id="header-wrapper">
-					<div id="header" class="container">
+      <!-- Header -->
+      <div id="header-wrapper">
 
-						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Layouts</a></h1>
+	<!-- Hero -->
+	<section id="hero" class="container">
+	  <header>
+	    <h2>Open Opportunity Data</h2>
+	  </header>
+	  <p>A community of practice dedicated to improving lives.</p>
+	</section>
 
-						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li>
-										<a href="#">Dropdown</a>
-										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
-											<li>
-												<a href="#">Phasellus consequat</a>
-												<ul>
-													<li><a href="#">Lorem ipsum dolor</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-												</ul>
-											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
-										</ul>
-									</li>
-									<li><a href="left-sidebar.html">Left Sidebar</a></li>
-									<li class="break"><a href="right-sidebar.html">Right Sidebar</a></li>
-									<li><a href="no-sidebar.html">No Sidebar</a></li>
-								</ul>
-							</nav>
+      </div>
 
-					</div>
+      	  <!-- Intro -->
+	  <section id="intro" class="container">
+	    <div class="row">
+	      <div class="4u 12u(mobile)">
+		<section class="first">
+		  <i class="icon featured fa-question"></i>
+		  <header>
+		    <h2>Learn</h2>
+		  </header>
+		  <p>What is all this?</p>
+		</section>
+	      </div>
+	      <div class="4u 12u(mobile)">
+		<section class="middle">
+		  <i class="icon featured alt fa-connectdevelop"></i>
+		  <header>
+		    <h2>Connect</h2>
+		  </header>
+		  <p>Meet the community.</p>
+		</section>
+	      </div>
+	      <div class="4u 12u(mobile)">
+		<section class="last">
+		  <i class="icon featured alt2 fa-code"></i>
+		  <header>
+		    <h2>Build</h2>
+		  </header>
+		  <p>Use data to change lives.</p>
+		</section>
+	      </div>
+	    </div>
+	  </section>
 
-					<!-- Hero -->
-						<section id="hero" class="container">
-							<header>
-								<h2>Open Opportunity Data</h2>
-							</header>
-							<p>A community of practice dedicated to improving lives.</p>
-							<ul class="actions">
-								<li><a href="#" class="button">Get this party started</a></li>
-							</ul>
-						</section>
+      <!-- Features 1 -->
+      <div class="wrapper">
+	<div class="container">
+	  <div class="row">
+	    <section class="6u 12u(narrower) feature">
+	      <div class="image-wrapper first">
+		<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
+	      </div>
+	      <header>
+		<h2>Semper magna neque vel<br />
+		  adipiscing curabitur</h2>
+	      </header>
+	      <p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
+		sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
+		adipiscing elit. Curabitur vel sem sit.</p>
+	      <ul class="actions">
+		<li><a href="#" class="button">Elevate my awareness</a></li>
+	      </ul>
+	    </section>
+	    <section class="6u 12u(narrower) feature">
+	      <div class="image-wrapper">
+		<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+	      </div>
+	      <header>
+		<h2>Amet lorem ipsum dolor<br />
+		  sit consequat magna</h2>
+	      </header>
+	      <p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
+		sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
+		adipiscing elit. Curabitur vel sem sit.</p>
+	      <ul class="actions">
+		<li><a href="#" class="button">Elevate my awareness</a></li>
+	      </ul>
+	    </section>
+	  </div>
+	</div>
+      </div>
 
-				</div>
 
-			<!-- Features 1 -->
-				<div class="wrapper">
-					<div class="container">
-						<div class="row">
-							<section class="6u 12u(narrower) feature">
-								<div class="image-wrapper first">
-									<a href="#" class="image featured first"><img src="images/pic01.jpg" alt="" /></a>
-								</div>
-								<header>
-									<h2>Semper magna neque vel<br />
-									adipiscing curabitur</h2>
-								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
-								</ul>
-							</section>
-							<section class="6u 12u(narrower) feature">
-								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
-								</div>
-								<header>
-									<h2>Amet lorem ipsum dolor<br />
-									sit consequat magna</h2>
-								</header>
-								<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel
-								sem sit dolor neque semper magna. Lorem ipsum dolor sit amet consectetur et sed
-								adipiscing elit. Curabitur vel sem sit.</p>
-								<ul class="actions">
-									<li><a href="#" class="button">Elevate my awareness</a></li>
-								</ul>
-							</section>
-						</div>
-					</div>
-				</div>
 
-			<!-- Promo -->
-				<div id="promo-wrapper">
-					<section id="promo">
-						<h2>Neque semper magna et lorem ipsum adipiscing</h2>
-						<a href="#" class="button">Breach the thresholds</a>
-					</section>
-				</div>
+      <!-- Promo -->
+      <div id="promo-wrapper">
+	<section id="promo">
+	  <h2>Neque semper magna et lorem ipsum adipiscing</h2>
+	  <a href="#" class="button">Breach the thresholds</a>
+	</section>
+      </div>
 
-			<!-- Features 2 -->
-				<div class="wrapper">
-					<section class="container">
-						<header class="major">
-							<h2>What's happening?</h2>
-							<p>Explore this cross-sector collaboration.</p>
-						</header>
-						<div class="row features">
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper first">
-									<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								</div>
-								<p>The government is... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
-							</section>
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								</div>
-								<p>Developers are... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
+      <!-- Features 2 -->
+      <div class="wrapper">
+	<section class="container">
+	  <header class="major">
+	    <h2>What's happening?</h2>
+	    <p>Explore this cross-sector collaboration.</p>
+	  </header>
+	  <div class="row features">
+	    <section class="4u 12u(narrower) feature">
+	      <div class="image-wrapper first">
+		<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+	      </div>
+	      <p>The government is... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
+	    </section>
+	    <section class="4u 12u(narrower) feature">
+	      <div class="image-wrapper">
+		<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+	      </div>
+	      <p>Developers are... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
 
-							</section>
-							<section class="4u 12u(narrower) feature">
-								<div class="image-wrapper">
-									<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								</div>
-								<p>Civil society is... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
-							</section>
-						</div>
-						<ul class="actions major">
-							<li><a href="#" class="button">Elevate my awareness</a></li>
-						</ul>
-					</section>
-				</div>
+	    </section>
+	    <section class="4u 12u(narrower) feature">
+	      <div class="image-wrapper">
+		<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+	      </div>
+	      <p>Civil society is... Lorem ipsum dolor sit amet consectetur et sed adipiscing elit.</p>
+	    </section>
+	  </div>
+	  <ul class="actions major">
+	    <li><a href="#" class="button">Elevate my awareness</a></li>
+	  </ul>
+	</section>
+      </div>
 
-			<!-- Footer -->
-				<div id="footer-wrapper">
-					<div id="footer" class="container">
-						<header class="major">
-							<h2>Euismod aliquam vehicula lorem</h2>
-							<p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit<br />
-							dolor neque semper magna lorem ipsum feugiat veroeros lorem ipsum dolore.</p>
-						</header>
-						<div class="row">
-							<section class="6u 12u(narrower)">
-								<form method="post" action="#">
-									<div class="row 50%">
-										<div class="6u 12u(mobile)">
-											<input name="name" placeholder="Name" type="text" />
-										</div>
-										<div class="6u 12u(mobile)">
-											<input name="email" placeholder="Email" type="text" />
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<textarea name="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<div class="row 50%">
-										<div class="12u">
-											<ul class="actions">
-												<li><input type="submit" value="Send Message" /></li>
-												<li><input type="reset" value="Clear form" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
-							<section class="6u 12u(narrower)">
-								<div class="row 0%">
-									<ul class="divided icons 6u 12u(mobile)">
-										<li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
-										<li class="icon fa-facebook"><a href="#"><span class="extra">facebook.com/</span>untitled</a></li>
-										<li class="icon fa-dribbble"><a href="#"><span class="extra">dribbble.com/</span>untitled</a></li>
-									</ul>
-									<ul class="divided icons 6u 12u(mobile)">
-										<li class="icon fa-instagram"><a href="#"><span class="extra">instagram.com/</span>untitled</a></li>
-										<li class="icon fa-youtube"><a href="#"><span class="extra">youtube.com/</span>untitled</a></li>
-										<li class="icon fa-pinterest"><a href="#"><span class="extra">pinterest.com/</span>untitled</a></li>
-									</ul>
-								</div>
-							</section>
-						</div>
-					</div>
-					<div id="copyright" class="container">
-						<ul class="menu">
-							<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-				</div>
-
+      <!-- Footer -->
+      <div id="footer-wrapper">
+	<div id="footer" class="container">
+	  <header class="major">
+	    <h2>Euismod aliquam vehicula lorem</h2>
+	    <p>Lorem ipsum dolor sit amet consectetur et sed adipiscing elit. Curabitur vel sem sit<br />
+	      dolor neque semper magna lorem ipsum feugiat veroeros lorem ipsum dolore.</p>
+	  </header>
+	  <div class="row">
+	    <section class="6u 12u(narrower)">
+	      <form method="post" action="#">
+		<div class="row 50%">
+		  <div class="6u 12u(mobile)">
+		    <input name="name" placeholder="Name" type="text" />
+		  </div>
+		  <div class="6u 12u(mobile)">
+		    <input name="email" placeholder="Email" type="text" />
+		  </div>
 		</div>
+		<div class="row 50%">
+		  <div class="12u">
+		    <textarea name="message" placeholder="Message"></textarea>
+		  </div>
+		</div>
+		<div class="row 50%">
+		  <div class="12u">
+		    <ul class="actions">
+		      <li><input type="submit" value="Send Message" /></li>
+		      <li><input type="reset" value="Clear form" /></li>
+		    </ul>
+		  </div>
+		</div>
+	      </form>
+	    </section>
+	    <section class="6u 12u(narrower)">
+	      <div class="row 0%">
+		<ul class="divided icons 6u 12u(mobile)">
+		  <li class="icon fa-twitter"><a href="#"><span class="extra">twitter.com/</span>untitled</a></li>
+		  <li class="icon fa-facebook"><a href="#"><span class="extra">facebook.com/</span>untitled</a></li>
+		  <li class="icon fa-dribbble"><a href="#"><span class="extra">dribbble.com/</span>untitled</a></li>
+		</ul>
+		<ul class="divided icons 6u 12u(mobile)">
+		  <li class="icon fa-instagram"><a href="#"><span class="extra">instagram.com/</span>untitled</a></li>
+		  <li class="icon fa-youtube"><a href="#"><span class="extra">youtube.com/</span>untitled</a></li>
+		  <li class="icon fa-pinterest"><a href="#"><span class="extra">pinterest.com/</span>untitled</a></li>
+		</ul>
+	      </div>
+	    </section>
+	  </div>
+	</div>
+	<div id="copyright" class="container">
+	  <ul class="menu">
+	    <li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+	  </ul>
+	</div>
+      </div>
 
-		<!-- Scripts -->
+    </div>
 
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+    <!-- Scripts -->
 
-	</body>
-</html>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.dropotron.min.js"></script>
+    <script src="assets/js/skel.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+    <script src="assets/js/main.js"></script>
+
+  </body>
+</html> -->
