--- a/d/index.html
+++ b/d/index.html
@@ -25,7 +25,7 @@ Free for personal and commercial use under the CCA 3.0 license (html5up.net/lice
 	  <header>
 	    <h2>Open Opportunity Data</h2>
 	  </header>
-	  <p>A community of practice dedicated to improving lives.</p>
+	  <p>Because where you start shouldn't determine where you end up.</p>
 	</section>
 
       	  <!-- Intro -->
